# StockBot

./: .gitignore  readme.md
Interfaz_Web/: index.css  index.html  main.css  start.sh
Interfaz_Web/app/: control_panel.html  login.html  register.html
Interfaz_Web/database/: StockBot_Data.db
Interfaz_Web/html/: panel_control.html
Interfaz_Web/react/: index.html  package-lock.json  package.json
Interfaz_Web/scripts/: camera.js  chat.js  connection.js  cookie.js  map_web.js  notifications.js
Interfaz_Web/src/: database.py  main.py  models.py  schemas.py
Interfaz_Web/styles/: forms.css  index.css  main.css  panel_control.css
stock_bot/: CMakeLists.txt  barcode_reader.py  chatbot.py  compilar_mundo.bash  lanzar_todo.sh  package.xml
stock_bot/tests/: navigation_logic.py  test_stockbot.py
stock_bot_camera/: package.xml  setup.cfg  setup.py
stock_bot_camera/stock_bot_camera/: barcode_reader.py  intruder_detector.py
stock_bot_interfaces/: CMakeLists.txt  package.xml
stock_bot_interfaces/srv/: GoToPoint.srv
stock_bot_my_world/: CMakeLists.txt  package.xml
stock_bot_my_world/launch/: my_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
stock_bot_my_world/urdf/: turtlebot3_burger.urdf
stock_bot_my_world/worlds/: my_world.world  no_roof_small_warehouse.world
stock_bot_nav_punto/: package.xml  setup.cfg  setup.py
stock_bot_nav_punto/config/: navigation.rviz
stock_bot_nav_punto/launch/: navigation.launch.py
stock_bot_nav_punto/param/: burger.yaml
stock_bot_patrol/: package.xml  setup.cfg  setup.py
(+30 files in other folders)
